--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -33,6 +33,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 132px;
+  line-height: 85%;
 }
 .heading-2 {
   font-size: 44px;
